Added custom pages setup, fixed drizzle error,fixed dashboard counts bug
